--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@tpdewolf/prisma-nestjs-dto-generator",
-  "version": "0.0.6",
+  "name": "@refo/prisma-nestjs-dto-generator",
+  "version": "0.0.7",
   "license": "MIT",
   "author": {
-    "name": "Tim de Wolf",
-    "url": "https://www.github.com/tpdewolf"
+    "name": "Refik ÖNAL",
+    "url": "https://github.com/refo"
   },
   "main": "dist/generator.js",
   "typings": "dist/generator.d.ts",
@@ -27,7 +27,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/tpdewolf/prisma-nestjs-dto-generator"
+    "url": "https://github.com/refo/prisma-nestjs-dto-generator"
   },
   "bin": {
     "prisma-nestjs-dto-generator": "dist/generator.js"
